vscode/02-coder-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder-svc
spec:
  ports:
  - name: http
    port: 7000
  selector:
    app: coder-app
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: coder-app
  name: coder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coder-app
  template:
    metadata:
      labels:
        app: coder-app
    spec:
      imagePullSecrets:
        - name: docker-registry
      nodeSelector:
        k8s3-ingress: worker
      serviceAccountName: coder
      containers:
        - image: acr.resx.cc/suisrc/code-server:v1.41.1-centos7-k8s
          name: coder
          ports:
            - containerPort: 7000
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - mountPath: /home/project
              name: volume-project
              subPath: k8s3
            - mountPath: /etc/localtime
              name: volume-localtime
      volumes:
        - name:  volume-project
          persistentVolumeClaim:
            claimName: k8s3-server-pvc-coder
          #hostPath:
          #  path: /var/lib/docker/k8s1/console/data
          #  type: 'DirectoryOrCreate'
        - hostPath:
            path: /etc/localtime
            type: ''
          name: volume-localtime
