vscode/05-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: coder-l2-irs
spec:
  rules:
    - host: csr.192-168-9-51.nip.io
      http:
        paths:
          - backend:
              serviceName: coder-svc
              servicePort: http
            path: /
  tls:
    - hosts:
        - csr.192-168-9-51.nip.io
